cholera 0.7.0.9021
==================

- roads2: x2 -> longitude; y2 -> latitude.
- add roadsLatLong() prototype.


cholera 0.7.0.9020
==================

- add roads2 prototype.


cholera 0.7.0.9019
==================

- amend roads2 (experimental).


cholera 0.7.0.9018
==================

- add rotatePoint(unique.coords = TRUE).
- use roads$id as index in rotatePoint().
- fix quadrants I & IV in rotatePoint().


cholera 0.7.0.9017
==================

- amend rotatePoint() prototype.


cholera 0.7.0.9016
==================

- add rotatePoint() prototype.


cholera 0.7.0.9015
==================

- add longitude and latitude to roads2 (experimental).


cholera 0.7.0.9014
==================

- add pointCentroids() prototype.


cholera 0.7.0.9013
==================

- add road.gcp.points (experimental).


cholera 0.7.0.9012
==================

- add pointsFromGeoTIFF().
- add roadsPlot().


cholera 0.7.0.9011
==================

- change README figures from 6" to 5.5".
- test multi.core = TRUE.


cholera 0.7.0.9010
==================

- fix unneeded warnings in addEuclideanPath().
- add subtitles for selected pumps in plot.euclidean().


cholera 0.7.0.9009
==================

- use 'viridisLite' in isoLines().
- copyedit "note on computational performance".


cholera 0.7.0.9008
==================

- add discussion of Euclidean/Voronoi "expected" neighborhoods.


cholera 0.7.0.9007
==================

- add parLapply() for isoVertices() for Windows.


cholera 0.7.0.9006
==================

- change 'RColorBrewer' to 'viridisLite' in plot.iso().


cholera 0.7.0.9005
==================

- add plot.iso(selected.post = "all").


cholera 0.7.0.9004
==================

- add amended isoVertices() prototype.


cholera 0.7.0.9003
==================

- note parallelization vignette in cholera-package.Rd.
- add and set default neighborhoodVoronoi(pump.location = "nominal").


cholera 0.7.0.9002
==================

- set neighborhoodVoronoi(case.location = "address") as default.
